<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/yandex_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/html_yandex_link"
            android:layout_marginLeft="10dp"
            android:textSize="14sp" />

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground"
            app:menu="@menu/navigation" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.neyagodamalina.nibnim.TranslateActivity"
        android:layout_above="@id/llBottom">

        <!-- Текст до перевода и кнопка очистки текста -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etBeforeTranslate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_style"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:minLines="4"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <Button
                android:id="@+id/btCleanTextBeforeTranslate"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignBottom="@+id/etBeforeTranslate"
                android:layout_alignRight="@+id/etBeforeTranslate"
                android:layout_margin="5dp"
                android:alpha="1"
                android:background="@drawable/ic_clear_black_24dp" />

        </RelativeLayout>
        <!-- Переключатель языка и кнопка "Переведи"-->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/en_ru"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12pt" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/ru_en"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/ru_en"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12pt" />

                    <RadioButton
                        android:id="@+id/en_ru"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/en_ru"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12pt" />
                </RadioGroup>


            </LinearLayout>

            <Button
                android:id="@+id/btTranslate"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="right"
                android:layout_margin="5dp"
                android:background="@drawable/translate_state" />

        </FrameLayout>
        <!-- Текст после перевода и кнопка включить в "Избранное" -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/tvAfterTranslate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_style"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:minLines="4"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="18sp" />

            <ToggleButton
                android:id="@+id/tbFavorite"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignBottom="@+id/tvAfterTranslate"
                android:layout_alignRight="@+id/tvAfterTranslate"
                android:layout_margin="10dp"
                android:background="@drawable/favorite_state"
                android:enabled="false"
                android:textOff=""
                android:textOn="" />
        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>
